# MaksDB

./: .dockerignore  Dockerfile.coordinator  Dockerfile.shard  README.md  api.py  coordinator.py  db_manager.py  docker-compose.yml  dump.rdb  grpc_server.py  pyproject.toml  requirements.txt  rw_lock.py  shard.py  test.py  test_api.py  utils.py  vector_db.py  vector_db_pb2.py  vector_db_pb2_grpc.py
Annoy/: api.py  db_manager.py  grpc_server.py  test.py  vector_db.proto  vector_db.py  vector_db_pb2_grpc.py
config/: config.yaml
tests/: test_db.db  test_db.py  test_existing_db.py  test_faiss.py
var/: bruh.txt  running_pids.txt
vectordb/: __init__.py
vectordb/api/: api.py  api_wrapper.py
vectordb/cli/: cli.py
vectordb/coordinator/: __init__.py  __main__.py
vectordb/shard/: __init__.py  __main__.py
vectordb/utils/: __init__.py  config_parser.py  network.py  rw_lock.py  types.py
